# private-credit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: Gemfile  _config.yml  getting-started.md  index.md  installation.md
docs/_includes/: sidebar.html
docs/_layouts/: default.html
docs/api/: data.md  evaluation.md  index.md  models.md
docs/architecture/: index.md  loan-trajectory.md  macro-vae.md  portfolio-aggregator.md  transition-transformer.md
docs/assets/css/: style.css
docs/data_schema/: feature_dictionary.csv  loan_tape_spec.md
docs/demos/: model-comparison.html  portfolio-builder.html  scenario-explorer.html
docs/research/: index.md  methodology.md  references.md
docs/research/math/: diffusion-head.md  macro-vae-derivation.md  risk-metrics.md  transition-dynamics.md  waterfall-mechanics.md
docs/research_proposal/: main.tex
docs/tutorials/: 01-data-generation.md  02-training-models.md  03-scenario-analysis.md  04-portfolio-simulation.md  05-custom-scenarios.md  06-calibration-guide.md  07-model-selection.md  08-production-deployment.md  index.md
notebooks/: 01_data_exploration.ipynb  02_macro_vae_training.ipynb  03_transition_analysis.ipynb  04_loan_trajectories.ipynb  05_portfolio_simulation.ipynb  06_stress_testing.ipynb  07_calibration.ipynb  08_model_comparison.ipynb
privatecredit/: __init__.py
privatecredit/calibration/: __init__.py  backtest.py  estimation.py  historical.py
privatecredit/data/: __init__.py  simulate_loans.py  simulate_macro.py
privatecredit/evaluation/: __init__.py
privatecredit/models/: __init__.py  baseline_markov.py  ensemble.py  loan_trajectory.py  macro_flow.py  macro_gan.py  macro_vae.py  portfolio_aggregator.py  transition_transformer.py
privatecredit/training/: __init__.py
privatecredit/utils/: __init__.py
slides/: 02_deep_dive.tex  03_case_study.tex  main.tex
slides/charts/01_architecture/: chart.py
slides/charts/02_data_flow/: chart.py
slides/charts/03_model_hierarchy/: chart.py
tests/: __init__.py  test_imports.py
