[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "privatecredit"
version = "0.1.0"
description = "Deep Generative Models for Private Credit SPV Analytics"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Digital Finance Research", email = "research@digital-finance.org"}
]
maintainers = [
    {name = "Digital Finance Research"}
]
keywords = [
    "credit-risk",
    "deep-learning",
    "generative-models",
    "spv",
    "securitization",
    "loan-portfolio",
    "vae",
    "transformer",
    "diffusion",
    "monte-carlo"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.4",
    "torch>=2.0",
    "scipy>=1.9",
    "matplotlib>=3.5",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.0",
    "flake8>=6.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.2",
    "myst-parser>=1.0",
]
all = [
    "privatecredit[dev,docs]",
]

[project.urls]
Homepage = "https://digital-ai-finance.github.io/private-credit/"
Documentation = "https://digital-ai-finance.github.io/private-credit/"
Repository = "https://github.com/Digital-AI-Finance/private-credit"
Issues = "https://github.com/Digital-AI-Finance/private-credit/issues"
Changelog = "https://github.com/Digital-AI-Finance/private-credit/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["privatecredit*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=privatecredit --cov-report=term-missing"
